kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterservice
spec:
  selector:
    app: websocketsapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
