kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "ajdfdelgado.hopto.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterservice
            port:
              number: 8080
